examples/test/testpolicy10746.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10746
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key45: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value41
          key37: value48
      podSelector:
        matchLabels:
          key2: value4
          key44: value49
          key16: value33
